# git-repo-summarizer

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/prompts/: README.md  system_prompt.md  user_prompt.md
app/routes/: summarize.py
app/schemas/: summarize.py
app/services/: github_service.py  llm_service.py  repo_processor.py
