[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-repo-summarizer"
version = "1.0.0"
description = "GitHub repository summarizer using LLM to generate project summaries"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]